[gd_scene load_steps=2 format=3 uid="uid://db3fwknmevvbm"]

[ext_resource type="Script" path="res://Scene/StartScene/main.gd" id="1_an6nf"]

[node name="Main" type="Node"]
script = ExtResource("1_an6nf")

[node name="ButtonScreen" type="Node2D" parent="."]

[node name="Button" type="Button" parent="ButtonScreen"]
offset_left = 107.0
offset_top = 87.0
offset_right = 155.0
offset_bottom = 128.0
text = "Minigame 1"

[node name="Button2" type="Button" parent="ButtonScreen"]
offset_left = 434.0
offset_top = 92.0
offset_right = 551.0
offset_bottom = 132.0
text = "Minigame 2"

[node name="Button3" type="Button" parent="ButtonScreen"]
offset_left = 784.0
offset_top = 90.0
offset_right = 902.0
offset_bottom = 132.0
text = "Minigame 3"

[node name="Button4" type="Button" parent="ButtonScreen"]
offset_left = 98.0
offset_top = 222.0
offset_right = 216.0
offset_bottom = 264.0
text = "Minigame 4"

[node name="Button5" type="Button" parent="ButtonScreen"]
offset_left = 438.0
offset_top = 224.0
offset_right = 556.0
offset_bottom = 266.0
text = "Minigame 5
"

[node name="MainWorld" type="Button" parent="ButtonScreen"]
offset_right = 8.0
offset_bottom = 8.0
text = "Main World"

[node name="Button6" type="Button" parent="ButtonScreen"]
offset_left = 775.0
offset_top = 219.0
offset_right = 893.0
offset_bottom = 261.0
text = "Minigame 6
"

[connection signal="pressed" from="ButtonScreen/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ButtonScreen/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ButtonScreen/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ButtonScreen/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="ButtonScreen/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="ButtonScreen/MainWorld" to="." method="_on_main_world_pressed"]
[connection signal="pressed" from="ButtonScreen/Button6" to="." method="_on_button_6_pressed"]
